# erynfall-engine

./: .gitignore  .gitmodules  README.md
client/: SConstruct  erynfall_client.gdextension  erynfall_client.gdextension.uid  project.godot
client/scenes/: CombatOverlay.gd  CombatOverlay.gd.uid  DeathScreen.gd  DeathScreen.gd.uid  EquipmentPanel.gd  FishSpotManager.gd  GameTick.gd  GameTick.gd.uid  InventoryPanel.gd  InventoryPanel.gd.uid  LevelUpNotification.gd  LevelUpNotification.gd.uid  Main.gd  Main.gd.uid  Main.tscn  NPCManager.gd  NPCManager.gd.uid  NetworkClient.gd  NetworkClient.gd.uid  OrbitalCamera.gd  OrbitalCamera.gd.uid  Player.gd  Player.gd.uid  RockManager.gd  ShopPanel.gd  SkillsPanel.gd  SkillsPanel.gd.uid  TileHighlight.gd  TileHighlight.gd.uid  TreeManager.gd  TreeManager.gd.uid
client/src/: register_types.cpp
client/src/input/: player_controller.cpp  player_controller.h
client/src/world/: tile_map.cpp  tile_map.h
docs/: ARCHITECTURE.md  DESIGN.md  PHASES.md  PROTOCOL.md
server/: CMakeLists.txt
server/src/: main.cpp
server/src/core/: game_loop.cpp  game_loop.h
server/src/db/: database.h  sqlite_db.cpp
server/src/game/: equipment.cpp  equipment.h  inventory.cpp  inventory.h  skill_set.cpp  skill_set.h
server/src/net/: tcp_server.cpp  tcp_server.h
server/src/world/: ground_items.cpp  ground_items.h  npc_manager.cpp  npc_manager.h  world_map.cpp  world_map.h  world_objects.cpp  world_objects.h
shared/constants/: game_constants.h
shared/game_data/: item_defs.h  npc_defs.h  xp_table.h
shared/protocol/: buffer.cpp  buffer.h  opcodes.h
shared/types/: item.h  position.h  skill.h
